# ai-wealth-builder

./: .env  .gitignore  App.tsx  Cargo.toml  README.md
backend/: .env  ai_wealth_builder.db  main.py  package-lock.json  package.json  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py
backend/app/routers/: auth.py  portfolio.py
backend/app/services/: auth.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel.js  @swc.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  dom-helpers.js  eventemitter3.js  fast-equals.js  framer-motion.js  internmap.js  lodash.js  next.js  object-assign.js  prop-types.js  react-is.js  react-smooth.js  react-transition-group.js  recharts-scale.js  recharts.js  tiny-invariant.js  victory-vendor.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/public/: manifest.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BudgetManager.tsx  Dashboard.tsx  LoginForm.tsx  RegisterForm.tsx  Subscriptions.tsx  TransactionList.tsx
frontend/src/context/: AppContext.tsx
frontend/src/types/: api.ts
frontend/src/utils/: colors.ts
src/: main.rs
(+35 files in other folders)
