[package]
name = "ai-wealth-builder-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
